--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "bcryptjs": "^3.0.2",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.344.0",
     "mongodb": "^6.3.0",
+    "mongoose": "^8.16.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1"
